Initial commit of fips203-java.  Includes basic implementation of FIPS202 Keccak-f 1600 permutation and early sketch of interfaces and key pair implementation for FIPS203.

--- a/.gitignore
+++ b/.gitignore
@@ -24,5 +24,12 @@ hs_err_pid*
 replay_pid*
 
 # IntelliJ IDEA Project files
-/.idea
-/*.iml
+.idea
+*.iml
+
+# Gradle execs
+.gradle
+/gradle
+gradlew
+gradlew.bat
+/build
