Temporarily updating things to use an old FIPS 202 draft spec implementation from GitHub.  KeyPair generation passes using this as a library, but the library is over a decade out of date and badly constructed.  Will need to write my own copy to replace it once I get further along.

--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,13 @@ plugins {
 group = 'com.mimiclone'
 version = '0.0.1-SNAPSHOT'
 
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(21);
+        vendor = JvmVendorSpec.ADOPTIUM;
+    }
+}
+
 idea {
     module {
         downloadJavadoc = true
@@ -20,10 +27,12 @@ configurations {
 }
 
 repositories {
+    mavenLocal()
     mavenCentral()
 }
 
 dependencies {
+    implementation 'com.github.aelstad:keccakj:1.1.0'
     compileOnly 'org.projectlombok:lombok:1.18.34'
     annotationProcessor 'org.projectlombok:lombok:1.18.34'
     testImplementation 'org.junit.jupiter:junit-jupiter:5.10.3'
